--- a/scholatransit_driver_app/android/app/src/main/AndroidManifest.xml
+++ b/scholatransit_driver_app/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
-        android:label="scholatransit_driver_app"
+        android:label="Go Drop"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:enableOnBackInvokedCallback="true">
