--- a/scholatransit_driver_app/android/app/src/main/AndroidManifest.xml
+++ b/scholatransit_driver_app/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,10 @@
         android:label="Go Drop"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        android:enableOnBackInvokedCallback="true">
+        android:enableOnBackInvokedCallback="true"
+        android:hardwareAccelerated="true"
+        android:largeHeap="true"
+        android:requestLegacyExternalStorage="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
