--- a/scholatransit_driver_app/pubspec.yaml
+++ b/scholatransit_driver_app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   uuid: ^4.4.0
   permission_handler: ^11.3.1
   connectivity_plus: ^6.0.5
+  url_launcher: ^6.2.5
 
   # UI Components
   flutter_screenutil: ^5.9.3
