--- a/scholatransit_driver_app/pubspec.yaml
+++ b/scholatransit_driver_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   permission_handler: ^11.3.1
   connectivity_plus: ^6.0.5
   url_launcher: ^6.2.5
+  flutter_contacts: ^1.1.7+1
 
   # UI Components
   flutter_screenutil: ^5.9.3
